dash mobile frielndly

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -16,6 +16,7 @@
     <div class="header">
         <div class="left-head">
             <div class="logo"><img src="img/logo.svg" alt="" class="logoimg"></div>
+            <a href="#" class="hamburger-icon" id="hiding-hamburger"><i class="fa fa-bars"></i></a>
         </div>
         <div class="central-head">
             <!--<div class="searchdiv"><input type="text" class="search_input"></div>-->
@@ -84,17 +85,17 @@
                     <div class="canv-container">
                         <h4 class="h4Attention" > Attenzione</h4>
                         <img class="eye_img" src="img/eye.png">
-                        <canvas id="attention-piechart" width="437" height="375" style="display: block; height: 300px; width: 350px;"></canvas>
+                        <canvas id="attention-piechart" width="350" height="300" style="display: block; height: 300px; width: 350px;" ></canvas>
                     </div>
                     <div class="canv-container">
                         <h4 class="h4Satisfaction" > Autenticazione</h4>
                         <img src="img/face.png" class="face_img">
-                        <canvas id="presence-piechart" width="437" height="375" style="display: block; height: 300px; width: 350px;"></canvas>
+                        <canvas id="presence-piechart" width="350" height="300" style="display: block; height: 300px; width: 350px;" ></canvas>
                     </div>
                     <div class="canv-container">
                         <h4 class="h4Autentication" > Soddisfazione</h4>
                         <img class="like_img" src="img/like.png">
-                        <canvas id="satisfaction-piechart" width="437" height="375" style="display: block; height: 300px; width: 350px;"></canvas>
+                        <canvas id="satisfaction-piechart" width="350" height="300" style="display: block; height: 300px; width: 350px;" ></canvas>
                     </div>
                 </div><!--end div #emo_containers-->
                 <div class="events_container"><!-- begin events container-->
