--- a/Dashboard_chart_js/charts_light.html
+++ b/Dashboard_chart_js/charts_light.html
@@ -12,8 +12,8 @@
 <body>
   <div class="selects_container container">
     <div class="video_select_div">
-        <label class="select vid_select" for="video_select">
-          <select name="" id="video_select"  >
+        <label class=" vid_select" for="video_select">
+          <select name="" class = "select" id="video_select"  >
             <option value="0">seleziona video</option>
             <option value="2">prova2</option>
             <option value="3">prova3</option>
@@ -22,18 +22,20 @@
         </label>
     </div>
     <div class="from_date_div">
-      <label class="select" for="start">
+      <label  for="start"> Da: 
 
       <input type="date" id="from_date_input" name="trip-start"
             value=""
+            class = "select"
             min="2018-01-01" max="2022-12-31">
       </label>
     </div>
-    <div class="to_date_div">
-      <label class="select" for="to_date_input">
+    <div class="to_date_div"> 
+      <label " for="to_date_input">A: 
 
       <input type="date" id="to_date_input" name="trip-start"
             value=""
+            class = "select"
             min="2018-01-01" max="2022-12-31">
       </label>
     </div>
