--- a/Dashboard_chart_js/charts_light.html
+++ b/Dashboard_chart_js/charts_light.html
@@ -31,7 +31,7 @@
       </label>
     </div>
     <div class="to_date_div"> 
-      <label " for="to_date_input">A: 
+      <label  for="to_date_input">A: 
 
       <input type="date" id="to_date_input" name="trip-start"
             value=""
